# proxmox-rrd-migration-tool

./: .gitignore  Cargo.toml  Makefile  build.rs
.cargo/: config.toml
debian/: changelog  control  copyright  install  links  proxmox-rrd-migration.service  rules
src/: main.rs
tests/: migration.rs  utils.rs
tests/resources/compare/: pve-node-9.0_testnode  pve-storage-9.0_testnode_iso  pve-vm-9.0_100  second_empty_run  second_run_with_missed
tests/resources/resourcelists/: .members  .vmlist
tests/resources/source/pve2-node/: othernode.old
tests/resources/source/pve2-storage/testnode/: iso
tests/resources/source/pve2-vm/: 500.old
