[package]
name = "proxmox_rrd_migration_8-9"
version = "0.1.0"
edition = "2021"
authors = [
    "Aaron Lauterer <a.lauterer@proxmox.com>",
    "Proxmox Support Team <support@proxmox.com>",
]
license = "AGPL-3"
homepage = "https://www.proxmox.com"

[dependencies]
anyhow = "1.0.86"
pico-args = "0.5.0"
proxmox-async = "0.4"
crossbeam-channel = "0.5"

[build-dependencies]
bindgen = "0.66.1"
pkg-config = "0.3"
