[package]
name = "proxmox-rrd-migration-tool"
version = "1.0.3"
edition = "2021"
authors = [
    "Aaron Lauterer <a.lauterer@proxmox.com>",
    "Proxmox Support Team <support@proxmox.com>",
]
license = "AGPL-3"
homepage = "https://www.proxmox.com"

[dependencies]
anyhow = "1"
pico-args = "0.5"
proxmox-async = "0.5"
crossbeam-channel = "0.5"

[build-dependencies]
bindgen = "0.71"
pkg-config = "0.3"

[dev-dependencies]
pretty_assertions = "1.4"
